--- a/tasks/Rakefile
+++ b/tasks/Rakefile
@@ -4,7 +4,13 @@ require 'nokogiri'
 require 'json'
 require 'geokit'
 
-$db = Mongo::Connection.new()["hackathon_rerout"]
+$db = Mongo::Connection.new(ENV["HACKATHON_REROUTE_MONGO_SERVER"], ENV["HACKATHON_REROUTE_MONGO_PORT"])["hackathon_reroute"]
+begin
+  $auth = $db.authenticate(ENV["HACKATHON_REROUTE_MONGO_USERNAME"], ENV["HACKATHON_REROUTE_MONGO_PASSWORD"])
+rescue 
+  #do nothing for now
+end
+puts $db
 
 #If you don't have accidents_geocoded.json
 #First run rake scrape
